--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,8 +24,8 @@ jobs:
       - uses: actions/setup-ruby@v1
         with: 
           ruby-version: ${{ env.RUBY_VERSION }}
-      - name: Install Rubocop
-        run: gem install rubocop
+      - name: Install Rubocop For Rails
+        run: gem install rubocop-rails
       - name: Check code
         run: rubocop
 
