add RSpec tests in ci.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
     - 'tmp/**/*'
     - 'vendor/**/*'
     - './*'
+  NewCops: enable
 
 Style/FrozenStringLiteralComment:
   Enabled: false
